<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Derivagral</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">←</string>
    <string name="y_equals">y=</string>
    <string name="e">e</string>
    <string name="pi">π</string>
    <string name="x">x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus_symbol">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus_symbol">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">×</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="power">^</string>
    <string name="divide">/</string>
    <string name="enter">∫ \'</string>
    <string name="title_section1">title One</string>
    <string name="title_section2">title Two</string>
    <string name="title_section3">title Three</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="c">C</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="arcsin">sin⁻¹</string>
    <string name="arccos">cos⁻¹</string>
    <string name="arctan">tan⁻¹</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">√¯¯</string>

</resources>
